# HR_student_project

./: .dockerignore  .env.compose.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  ТЗ.md
apps/backend/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml  pytest.ini  task2.db  task4.db
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: 1a2b3c4d5e6f_add_missing_indexes_p1.py  2b3c4d5e6f7g_add_p2_models.py  6282e6a58832_initial_schema.py  9b7a1f0cbf31_add_payment_entity_linkage.py  c431be6959b2_add_guest_vacancy_views.py
apps/backend/app/: __init__.py  main.py
apps/backend/app/api/: dependencies.py
apps/backend/app/core/: __init__.py  cache.py  config.py  enums.py  logging.py  rate_limit.py  security.py  telegram.py
apps/backend/app/db/: __init__.py  base.py  base_class.py  session.py
apps/backend/app/models/: __init__.py  (+6 more)
apps/backend/hr_student_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/backend/scripts/: seed_data.py
apps/backend/tests/: __init__.py  conftest.py  test_admin_api.py  test_applications_api.py  test_auth_api.py  test_datetime_defaults.py  test_hr_vacancies_api.py  test_rate_limit.py  test_status_enums.py  test_student_finance_api.py  test_telegram_verifier.py  test_vacancies_api.py  test_visibility.py
apps/bot/: .env.example  Dockerfile  README.md  pyproject.toml
apps/bot/app/: __init__.py  config.py  main.py  models.py  texts.py
apps/bot/hr_student_bot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/bot/tests/: __init__.py  test_menu_builders.py  test_notifications.py
(+113 files in other folders)
