[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hr-student-backend"
version = "0.1.0"
description = "Backend for the HR student project."
requires-python = ">=3.11"
dependencies = [
    "alembic",
    "fastapi",
    "pydantic",
    "pydantic-settings",
    "psycopg",
    "python-dotenv",
    "sqlalchemy",
    "uvicorn",
]

[project.optional-dependencies]
dev = [
    "httpx",
    "pytest",
]

[tool.setuptools.packages.find]
include = ["app*"]
